<resources>
    <string name="facebook_app_id">2907430382686517</string>
    <string name="fb_login_protocol_scheme">fb2907430382686517</string>
    <string name="app_name">PUSH</string>
    <string name="ads_id">ca-app-pub-3940256099942544~3347511713</string>
    <string name="ads_bnr">ca-app-pub-3940256099942544/6300978111</string>
    <string name="ads_inter">ca-app-pub-3940256099942544/1033173712</string>
    <string name="fb_bnr">604187330152975_604241586814216</string>
    <string name="fb_inter">604187330152975_604188866819488</string>
    <string name="moreaccount">Account+Name</string>
    <string name="AVG_PACE">AVG PACE</string>
    <string name="AVG_SPEED">AVERAGE SPEED</string>
    <string name="About">About</string>
    <string name="AutoPause">Auto pause</string>
    <string name="BMI_calculator">BMI calculator</string>
    <string name="CALORIES">CALORIES</string>
    <string name="CALORIES_kcal">CALORIES (KCAL)</string>
    <string name="Calculate">Calculate</string>
    <string name="Calories">Calories</string>
    <string name="Change_your_data">Change your data</string>
    <string name="Change_your_personal_data">Change your personal data</string>
    <string name="Choose_unit">Choose unit of measure</string>
    <string name="Coming_soon">Coming soon on GooglePlay market.</string>
    <string name="DISTANCE">DISTANCE</string>
    <string name="DISTANCE_km">DISTANCE (KM)</string>
    <string name="DISTANCE_mi">DISTANCE (MI)</string>
    <string name="DURATION">DURATION</string>
    <string name="Daily_goal">Daily goal</string>
    <string name="Daily_goal_calories">Daily goal: calories</string>
    <string name="Daily_goal_distance">Daily goal: distance</string>
    <string name="Daily_goal_time_min">Daily goal: time</string>
    <string name="Data">Data</string>
    <string name="Date_format">Date format</string>
    <string name="Distance">Distance</string>
    <string name="Duration">Duration</string>
    <string name="Error_in_calc">Error in calculating.</string>
    <string name="Error_saving_data">Error saving data</string>
    <string name="Exit">Exit</string>
    <string name="Facebook">Facebook</string>
    <string name="GOAL">GOAL</string>
    <string name="GPS_is_not_turned_on">GPS is not turned on</string>
    <string name="Gender">Gender</string>
    <string name="Get_sound_notification">Get sound notification when you reach a daily goal</string>
    <string name="Goal_reached_calories">You have reached the goal set for calories.</string>
    <string name="Goal_reached_distance">You have achieved the goal set for the distance.</string>
    <string name="Goal_reached_time">You have achieved the goal set for the time.</string>
    <string name="Height">Height</string>
    <string name="I_ran">I ran</string>
    <string name="Interval">Interval</string>
    <string name="Interval_for_voice_notification">Interval for voice notification</string>
    <string name="Language">Language</string>
    <string name="Language_and_translation">Language and translation</string>
    <string name="Later">Later</string>
    <string name="MAX_SPEED">MAX SPEED</string>
    <string name="Map">Map</string>
    <string name="Month">Month</string>
    <string name="Music">Music</string>
    <string name="My_distance_was">My distance was</string>
    <string name="No">No</string>
    <string name="Normal_weight">Average</string>
    <string name="Notification">Notification</string>
    <string name="Notification_calories_summ">Turn on voice notification for number of burned calories</string>
    <string name="Notification_distance">Distance traveled</string>
    <string name="Notification_distance_summ">Turn on voice notification for distance traveled</string>
    <string name="Notification_pace_summ">Turn on voice notification for pace</string>
    <string name="Notification_speed_summ">Turn on voice notification for speed</string>
    <string name="Notification_time_summ">Turn on voice notification for time</string>
    <string name="OK">OK</string>
    <string name="Obesity">High</string>
    <string name="Our_other_apps">Our other applications</string>
    <string name="Overweight">Above Average</string>
    <string name="Pace">Pace</string>
    <string name="Pause">Pause</string>
    <string name="Rate_this_app">Rate this app</string>
    <string name="Reach_a_speed_of_20_kph">Reach a speed of 20 kph</string>
    <string name="Reach_a_speed_of_30_kph">Reach a speed of 30 kph</string>
    <string name="Records">Personal Best</string>
    <string name="Resume">Resume</string>
    <string name="Run_total_10000_km">Run total 10k km</string>
    <string name="Run_total_10000_mi">Run total 10k mi</string>
    <string name="Run_total_1000_km">Run total 1k km</string>
    <string name="Run_total_10k_min">Run total 10k min</string>
    <string name="Run_total_125_mi">Run total 125 mi</string>
    <string name="Run_total_12_mi">Run total 12 mi</string>
    <string name="Run_total_1k_min">Run total 1k min</string>
    <string name="Run_total_200_km">Run total 200 km</string>
    <string name="Run_total_20_km">Run total 20 km</string>
    <string name="Run_total_3000_mi">Run total 3k mi</string>
    <string name="Run_total_5000_km">Run total 5k km</string>
    <string name="Run_total_500_min">Run total 500 min</string>
    <string name="Run_total_50k_min">Run total 50k min</string>
    <string name="Run_total_5k_min">Run total 5k min</string>
    <string name="Run_total_620_mi">Run total 620 mi</string>
    <string name="SENSOR_NOT_SUPPORTED">SENSOR NOT SUPPORTED</string>
    <string name="SPEED_km">SPEED (KPH)</string>
    <string name="SPEED_mi">SPEED (MPH)</string>
    <string name="Save">Save</string>
    <string name="Screen">Screen</string>
    <string name="Select_the_design">Select the design you like</string>
    <string name="Set_the_calories_goal">Set the number of calories you want to burn during the day</string>
    <string name="Set_the_distance_goal">Set the distance you want to reach during the day</string>
    <string name="Set_the_time_goal">Set the time for the total duration of training in minutes during the day</string>
    <string name="Settings">Settings</string>
    <string name="Share_Zeopoxa_Running">Share Running Tracker</string>
    <string name="Speak_option">Speak option</string>
    <string name="Speed">Speed</string>
    <string name="Spend_total_10k_kcal">Spend total 10k kcal</string>
    <string name="Spend_total_20k_kcal">Spend total 20k kcal</string>
    <string name="Spend_total_3k_kcal">Spend total 3k kcal</string>
    <string name="Spend_total_50k_kcal">Spend total 50k kcal</string>
    <string name="Spend_total_5k_kcal">Spend total 5k kcal</string>
    <string name="Start">Start</string>
    <string name="Stop">Stop</string>
    <string name="Theme">Theme</string>
    <string name="Time">Time</string>
    <string name="Underweight">Low</string>
    <string name="Units">Units</string>
    <string name="User_data">User data</string>
    <string name="Version">Version:</string>
    <string name="Visit_facebook">Visit Facebook</string>
    <string name="Visit_web_site">Visit Website</string>
    <string name="Voice_notification">Voice notification</string>
    <string name="Voice_notification_summ">Turn on voice notification in application</string>
    <string name="Web_site">Website</string>
    <string name="Weight">Weight</string>
    <string name="Welcome_to_Zeopoxa_Running">Welcome to PUSH</string>
    <string name="Year">Year</string>
    <string name="Year_of_birth">Year of birth</string>
    <string name="Yes">Yes</string>
    <string name="You_burned_v">You burned</string>
    <string name="You_burned_v2">You burned</string>
    <string name="You_run_v">You run</string>
    <string name="You_run_v2">You run</string>
    <string name="Your_data_are_required">Your data are required for precise computation of burned calories.</string>
    <string name="Your_pace_is_v">Your pace is</string>
    <string name="Your_pace_is_v2">Your pace is</string>
    <string name="Your_speed_is_v">Your speed is</string>
    <string name="Your_speed_is_v2">Your speed is</string>
    <string name="action_search">Search</string>
    <string name="action_settings">Settings</string>
    <string name="and_burned">and burned</string>
    <string name="and_burned_v">and burned</string>
    <string name="and_burned_v2">and burned</string>
    <string name="and_my_pace_was">and my pace was</string>
    <string name="and_run_v">and run</string>
    <string name="and_run_v2">and run</string>
    <string name="apr">apr</string>
    <string name="aug">aug</string>
    <string name="auto_pause_summ">Turn on auto pause</string>
    <string name="auto_pause_title">Auto pause</string>
    <string name="back">Back</string>
    <string name="calories">calories</string>
    <string name="calories_v">calories</string>
    <string name="calories_v2">calories</string>
    <string name="can_not_work_without_GPS">PUSH Running can not work without GPS.</string>
    <string name="dateText">Choose date format</string>
    <string name="dateTitle">Date format</string>
    <string name="dec">dec</string>
    <string name="delete">Delete</string>
    <string name="deleteText">Are you sure you want to delete?</string>
    <string name="distanceBased">Distance based</string>
    <string name="drawer_close">Close</string>
    <string name="drawer_open">Open</string>
    <string name="enjoyingText">Are you enjoying using a PUSH?</string>
    <string name="enjoyingTitle">Enjoying?</string>
    <string name="exit_text">Are you sure you want to exit?</string>
    <string name="feb">feb</string>
    <string name="feedback">Feedback</string>
    <string name="feet">feet</string>
    <string name="first_stop">First you have to click on the stop</string>
    <string name="fri">fri</string>
    <string name="giveFeedbackText">Would you mind giving us some feedback?</string>
    <string name="giveFeedbackTitle">Feedback</string>
    <string name="h">h</string>
    <string name="hhmm">hh:mm</string>
    <string name="history">History</string>
    <string name="incorrect_year_of_birth">You have not entered correct year of birth</string>
    <string name="intervalType">Interval type</string>
    <string name="it_took_you_v">it took you</string>
    <string name="it_took_you_v2">it took you</string>
    <string name="jan">jan</string>
    <string name="jul">jul</string>
    <string name="jun">jun</string>
    <string name="kcal">kcal</string>
    <string name="keep_screen_on">Prevent the screen to go off when the Start button is pressed</string>
    <string name="keep_screen_on_title">Keep screen on</string>
    <string name="kilometer_v">kilometer</string>
    <string name="kilometer_v2">kilometer</string>
    <string name="kilometers_per_hour_v">kilometers per hour</string>
    <string name="kilometers_per_hour_v2">kilometers per hour</string>
    <string name="kkcal0">0 kcal</string>
    <string name="km">km</string>
    <string name="km0">0 km</string>
    <string name="kmh0">0 kph</string>
    <string name="kph">kph</string>
    <string name="map_type">Change map type</string>
    <string name="map_type_title">Map type</string>
    <string name="mar">mar</string>
    <string name="may">may</string>
    <string name="mi">mi</string>
    <string name="miles_per_hour_v">miles per hour</string>
    <string name="miles_per_hour_v2">miles per hour</string>
    <string name="miles_v">miles</string>
    <string name="miles_v2">miles</string>
    <string name="min">min</string>
    <string name="minutes">minutes</string>
    <string name="minutes_per_kilometer_v">minutes per kilometer</string>
    <string name="minutes_per_kilometer_v2">minutes per kilometer</string>
    <string name="timeBased">Time based</string>
    <string name="units_default">Metric</string>
    <string name="what_should_be_read_out">What should be read out</string>
</resources>